--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "swr": "^0.1.18",
     "typescript": "3.6.2"
   },
   "scripts": {
